--- a/app/src/main/res/layout/view_file_list_item.xml
+++ b/app/src/main/res/layout/view_file_list_item.xml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/file_browser_list_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginTop="5dp"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    tools:text="sample" />
+    android:padding="5dp">
+
+    <ImageView
+        android:id="@+id/file_browser_list_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="15dp"
+        tools:src="@drawable/ic_launcher" />
+
+    <TextView
+        android:id="@+id/file_browser_list_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/file_browser_list_icon"
+        android:layout_toRightOf="@+id/file_browser_list_icon"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        tools:text="Medium Text" />
+
+    <TextView
+        android:id="@+id/file_browser_list_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/file_browser_list_text"
+        android:layout_toEndOf="@+id/file_browser_list_icon"
+        android:layout_toRightOf="@+id/file_browser_list_icon"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        tools:text="Small Text" />
+</RelativeLayout>
